@@ -6,6 +6,7 @@ version <next>:
 - add internal ebur128 library, remove external libebur128 dependency
 - Pro-MPEG CoP #3-R2 FEC protocol
 - premultiply video filter
+- Support for spherical videos
 
 version 3.2:
 - libopenmpt demuxer
